fixed the navbar on mobile or vertical monitors being the wrong colour

--- a/minecraftearth/style.css
+++ b/minecraftearth/style.css
@@ -135,7 +135,7 @@ nav {
 
 #smol-navbar {
   display: none;
-  background-color: var(--header);
+  background-color: var(--darker-bg);
   flex-direction: column;
   align-items: flex-start;
   width: 100%;
