--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ img {
 
 #smol-navbar {
   display: none;
-  background-color: var(--header);
+  background-color: var(--darker-bg);
   flex-direction: column;
   align-items: flex-start;
   width: 100%;
